<resources>
    <string name="app_name">Havings</string>
    <string name="prompt_ok">OK</string>
    <string name="name">ユーザー名</string>
    <string name="email">メールアドレス</string>
    <string name="password">パスワード</string>
    <string name="twitter">twitter</string>
    <string name="facebook">facebook</string>
    <string name="instagram">instagram</string>
    <string name="hatena">hatena</string>
    <string name="prompt_name">ユーザー名</string>
    <string name="prompt_email">メールアドレス</string>
    <string name="prompt_password">パスワード(半角英数字8文字以上)</string>
    <string name="action_register">登録</string>
    <string name="action_sign_in">ログイン</string>
    <string name="prompt_register_by_twitter">Twitterから登録</string>
    <string name="prompt_register_by_facebook">Facebookから登録</string>
    <string name="prompt_register_by_instagram">Instagramから登録</string>
    <string name="prompt_register_by_hatena">はてなから登録</string>
    <string name="prompt_signin_by_twitter">Twitterからログイン</string>
    <string name="prompt_signin_by_facebook">Facebookからログイン</string>
    <string name="prompt_signin_by_instagram">Instagramからログイン</string>
    <string name="prompt_signin_by_hatena">はてなからログイン</string>
    <string name="prompt_already_signup">既に登録済みの場合は</string>
    <string name="prompt_signin">ログイン</string>
    <string name="prompt_signout">ログアウト</string>
    <string name="error_invalid_email">メールアドレスが有効ではありません。</string>
    <string name="error_invalid_password">パスワードが短すぎます。</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">必須入力です。</string>
    <string name="error_list_name_required">リスト名を入力してください。</string>
    <string name="error_item_name_required">アイテム名を入力してください。</string>
    <string name="error_image_required">画像を最低1枚指定してください。</string>
    <string name="error_invalid_timer_due_at">現在時刻より前の時間は指定できません。</string>
    <string name="error_invalid_timer_done_at">現在時刻より先の時間は指定できません。</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="prompt_no_notification">お知らせはありません</string>
    <string name="prefix_user_by">by </string>
    <string name="action_share_item">共有する</string>
    <string name="action_favorite_item">いいね!する</string>
    <string name="already_favorite_item">いいね!済み</string>
    <string name="prompt_action_add_list">リストを追加</string>
    <string name="prompt_action_add_item">アイテムを追加</string>
    <string name="prompt_action_add_image">この%1$sに画像を追加</string>
    <string name="prompt_action_edit_item">この%1$sを編集</string>
    <string name="prompt_action_dump_item">この%1$sを手放す</string>
    <string name="prompt_action_delete_item">この%1$sを削除</string>
    <string name="prompt_action_add_image_from_home">画像を追加</string>
    <string name="prompt_action_edit_item_from_home">編集する</string>
    <string name="prompt_action_dump_item_from_home">手放す</string>
    <string name="prompt_action_delete_item_from_home">削除する</string>
    <string name="prompt_item_private">非公開のアイテム</string>
    <string name="item_list">モノリスト</string>
    <string name="prompt_no_item">アイテムはありません</string>
    <string name="prompt_no_item_with_self_list">アイテムはありません。\n\nこのリストの写真に写っているモノを追加してみましょう。\n片付けたい場所に今何があるかを記録すれば、片付けが効率的になるかも!?</string>
    <string name="item_images">画像</string>
    <string name="prompt_no_image">画像はありません</string>
    <string name="prompt_no_image_with_self_list">画像はありません。\n\n画像を追加してみませんか?\n片付けの記録が後で役に立つかも!?</string>
    <string name="item_graph">グラフ</string>
    <string name="item_count_prefix">モノの数: </string>
    <string name="favorite_item_list">いいね!したモノ</string>
    <string name="favorite_image_list">いいね!した画像</string>
    <string name="prompt_no_timer">設定中のタイマーはありません</string>
    <string name="prompt_no_timer_detail">このリストの場所をキレイに保つために、定期的に行いたいタスク(整理、ホコリ取り、掃除機がけ等)のタイマーを作成しましょう!</string>
    <string name="item_graph_date_range_prefix">記録期間 :</string>
    <string name="item_graph_date_range_from_to">から</string>
    <string name="navigate_to_detailgraph">グラフを詳しく見る</string>
    <string name="prompt_recent_activity">最近のアクティビティ</string>
    <string name="postfix_prompt_of_item_image">の画像</string>
    <string name="prefix_added_at">追加日: </string>
    <string name="owning_item">のアイテム</string>
    <string name="owning_list">のリスト</string>
    <string name="action_post_item">アイテムを追加する</string>
    <string name="event_type_add_item">アイテムを追加しました</string>
    <string name="event_type_add_list">リストを追加しました</string>
    <string name="event_type_add_something_to">を追加しました</string>
    <string name="event_type_add_image">画像を追加しました</string>
    <string name="event_type_add_image_to">に画像を追加しました</string>
    <string name="event_type_drop_item">アイテムを手放しました</string>
    <string name="event_type_drop_something_to">を手放しました</string>
    <string name="prompt_list_name_select">片付けたいところを選択</string>
    <string name="prompt_list_name_select_text1">片付けたいところを選んで、リストとして登録しましょう。</string>
    <string name="prompt_list_name_select_text2">片付けたいものをアイテムとしてリストの中に追加することができます。\nまた、リスト自体も別のリストの中に追加することが出来ます。</string>
    <string name="prompt_list_type_place">場所から</string>
    <string name="prompt_list_type_closet">収納から</string>
    <string name="prompt_list_type_category">カテゴリから</string>
    <string name="prompt_list_type_input">自分で入力</string>
    <string name="prompt_input_list_name">リスト名を入力...</string>
    <string name="prompt_choose_image_for_list">画像を選択</string>
    <string name="prompt_add_image_for_list">片付けたいところの「今」を記録しよう</string>
    <string name="prompt_add_image_for_list_detail1">片付けを始める前に、その場所が今どうなっているかを写真で記録しておきましょう。</string>
    <string name="prompt_add_image_for_list_detail2">片付けを始めた時の状態が分かれば、後でどれだけ片付けが進んだかがわかりやすくなるはずです！</string>
    <string name="prompt_create_form">%1$sの追加</string>
    <string name="prompt_edit_form">%1$sの編集</string>
    <string name="prompt_add_image_form">画像の追加</string>
    <string name="prompt_list_name">リスト名（必須）</string>
    <string name="prompt_item_name">アイテム名（必須）</string>
    <string name="prompt_list_image">画像の追加（必須）</string>
    <string name="prompt_edit_image">画像の編集・削除</string>
    <string name="prompt_list_image_from_camera">カメラから追加</string>
    <string name="prompt_list_image_from_gallery">ギャラリーから追加</string>
    <string name="prompt_image_memo">メモの追加</string>
    <string name="prompt_optional_image">画像の追加</string>
    <string name="prompt_image_not_added">画像はありません。</string>
    <string name="prompt_cancel_delete_image">削除を取消</string>
    <string name="prompt_tag">タグ</string>
    <string name="prompt_item_count">アイテムの数</string>
    <string name="prompt_add_to_list">属するリストの指定</string>
    <string name="prompt_private_type">公開範囲</string>
    <string name="prompt_private_type_main">この%1$sを公開する</string>
    <string name="prompt_private_type_detail_public">この%1$sは他の人も見れます</string>
    <string name="prompt_private_type_detail_private">この%1$sはあなた以外見ることは出来ません</string>
    <string name="prompt_private_type_detail_private_by_parent">親リストが非公開の場合は公開できません</string>
    <string name="prompt_post_item_button">%1$sを追加する</string>
    <string name="prompt_edit_item_button">%1$sを編集する</string>
    <string name="prompt_add_image_button">画像を追加する</string>
    <string name="prompt_as_garbage">手放したアイテムとして登録</string>
    <string name="prompt_garbage_reason_hint">手放す理由を入力...(オプション)</string>
    <string name="prompt_cancel">キャンセル</string>
    <string name="prompt_sending">送信中...</string>
    <string name="prompt_description">メモ</string>
    <string name="prompt_garbage_reason">手放す理由</string>
    <string name="prompt_item_added">%1$sを追加しました</string>
    <string name="prompt_item_updated">%1$sを編集しました</string>
    <string name="prompt_image_added">画像を追加しました</string>
    <string name="prompt_image_added_with_item">%1$sに画像を追加しました</string>
    <string name="prompt_item_dumped">%1$sを手放しました</string>
    <string name="prompt_item_deleted">%1$sを削除しました</string>
    <string name="prompt_item_dump">%1$sを手放す</string>
    <string name="prompt_item_delete">%1$sの削除</string>
    <string name="prompt_image_detail_edit_data">この画像の情報を編集</string>
    <string name="prompt_image_detail_delete_image">この画像を削除</string>
    <string name="prompt_image_detail_added_date">画像の追加日</string>
    <string name="prompt_image_detail_memo">画像のメモ</string>
    <string name="prompt_image_detail_update">更新</string>
    <string name="prompt_image_detail_update_sucess">更新しました</string>
    <string name="prompt_image_not_found">画像がありません</string>
    <string name="prompt_image_delete">画像の削除</string>
    <string name="prompt_image_delete_detail">この画像を削除します</string>
    <string name="prompt_image_delete_success">画像を削除しました</string>
    <string name="prompt_dump_item_button">手放す</string>
    <string name="prompt_delete_item_button">削除する</string>
    <string name="prompt_nothing">なし</string>
    <string name="unit_item_count">個</string>
    <string name="unit_item_count_en">items</string>
    <string name="prefix_unit_item_count_en">having</string>
    <string name="hint_to_item_name">アイテム名（必須）</string>
    <string name="hint_to_description_of_list">リストについてのメモ、コメント…</string>
    <string name="hint_to_description_of_item">アイテムについてのメモ、コメント…</string>
    <string name="hint_to_garbage_reason">手放す理由...</string>
    <string name="specify_list_name_from_tags">場所・収納アイテム・カテゴリから選ぶ</string>
    <string name="add_list_name_from_tags">場所・収納アイテム・カテゴリから追加</string>
    <string name="specify_list_name_by_input">自分で入力</string>
    <string name="prompt_private_type_global">全体に公開</string>
    <string name="prompt_private_type_follower">フォロワーまで公開</string>
    <string name="prompt_private_type_friends">相互フォロワーまで公開</string>
    <string name="prompt_private_type_secret">誰にも公開しない</string>
    <string name="prompt_image_date_select">画像の追加日を選択</string>
    <string name="prompt_dump_fellow_items">一緒に手放すアイテム/リスト</string>
    <string name="prompt_dump_fellow_items_explanation">一緒に手放すアイテム/リストを選択</string>
    <string name="prompt_dump_fellow_items_sub_explanation">このリストに含まれるアイテム・リストのうち、選択したものも同時に手放します。\n選択したリスト内のアイテムも全て手放されます。\n選択しなかったアイテム・リストは手放されず</string>
    <string name="prompt_delete_list">このリストを削除したことは履歴に残りません。他の人に通知もされません。\nまた、このリストは削除すると見ることができなくなります。</string>
    <string name="prompt_delete_item">このアイテムを削除したことは履歴に残りません。他の人に通知もされません。\nまた、このアイテムは削除すると見ることができなくなります。</string>
    <string name="prompt_delete_fellow_items">一緒に削除するアイテム/リスト</string>
    <string name="prompt_delete_fellow_items_explanation">一緒に削除するアイテム/リストを選択</string>
    <string name="prompt_delete_fellow_items_sub_explanation">このリストに含まれるアイテム・リストのうち、選択したものも同時に削除します。\n選択したリスト内のアイテムも全て削除されます。\n選択しなかったアイテム・リストは削除されず</string>
    <string name="prompt_setting_timers">設定中のタイマー</string>
    <string name="prompt_add_timer_button">タイマーを追加</string>
    <string name="prompt_timer_no_repeat">繰り返し無し</string>
    <string name="prefix_remaining_due_time">残り</string>
    <string name="postfix_remaining_due_time">オーバー</string>
    <string name="prompt_timer_done">タスク完了</string>
    <string name="prompt_timer_already_done">もうやった</string>
    <string name="prompt_timer_later_do">あとでやる</string>
    <string name="prefix_timer_next_due">次回:</string>
    <string name="prompt_timer_done_date">完了日時を選択…</string>
    <string name="prefix_timer_done_date">完了:</string>
    <string name="prompt_timer_done_desc">タスクを完了した日時を選択</string>
    <string name="prompt_timer_do_later_desc">タスクを行う予定の日時を選択</string>
    <string name="prefix_timer">タイマー:</string>
    <string name="postfix_delete_of_timer">を削除します。</string>
    <string name="text_delete_timer">削除をすると、このタイマーからの通知は一切されなくなります。\nこのタイマーを削除すると、このタイマーのタスクを行った履歴は見ることが出来なくなります。履歴を後から確認したい場合は「タイマーの終了」を行ってください。</string>
    <string name="prompt_timer_done_at">完了日時</string>
    <string name="prompt_next_due_at">次回の通知日時</string>
    <string name="postfix_prompt_next_due_at">に通知</string>
    <string name="postfix_prompt_timer_done_at">に完了</string>
    <string name="prompt_home">ホーム</string>
    <string name="prompt_setting">設定</string>
</resources>