<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_home_black_36dp"
            android:title="@string/prompt_home" />
        <item
            android:id="@+id/menu_user"
            android:icon="@drawable/ic_account_circle_black_36dp"
            android:title="マイページ" />
    </group>
    <group
        android:id="@+id/menu_other"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_setting"
            android:title="@string/prompt_setting" />
        <item
            android:title="使い方" />
        <item
            android:id="@+id/menu_logout"
            android:title="@string/prompt_signout" />
    </group>
</menu>