<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:gravity="center_horizontal"
        android:orientation="vertical">

        <!-- Login progress -->
        <ProgressBar android:id="@+id/loading_progress" style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" android:visibility="gone" />

        <ScrollView android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <LinearLayout android:id="@+id/form" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="vertical"
                android:layout_margin="@dimen/app_basic_padding"
                android:padding="@dimen/app_basic_padding"
                android:background="@color/primaryTextWhite">

                <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress" android:maxLines="1"
                        android:imeOptions="actionNext"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText android:id="@+id/password" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:hint="@string/prompt_password"
                        android:imeActionId="@+id/register"
                        android:imeActionLabel="@string/action_register"
                        android:imeOptions="actionUnspecified" android:inputType="textPassword"
                        android:maxLines="1" android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <Button android:id="@+id/session_start_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" android:text="@string/action_sign_in"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/app_basic_padding"
                    android:layout_marginBottom="@dimen/app_basic_padding"
                    android:text="or"
                    android:textSize="20sp"
                    android:textAlignment="center"/>

                <LinearLayout
                    android:id="@+id/register_by_twitter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/app_basic_padding"
                    android:gravity="center"
                    android:tag="@string/twitter"
                    android:background="#B3E5FC">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/twitter"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_signin_by_twitter"
                        android:textSize="18dp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/register_by_facebook"
                    android:layout_marginTop="@dimen/app_basic_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:tag="@string/facebook"
                    android:background="#C5CAE9">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/facebook"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_signin_by_facebook"
                        android:textSize="18dp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/register_by_instagram"
                    android:layout_marginTop="@dimen/app_basic_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:tag="@string/instagram"
                    android:background="#F5F5F5">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/instagram"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_signin_by_instagram"
                        android:textSize="18dp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/register_by_hatena"
                    android:layout_marginTop="@dimen/app_basic_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:tag="@string/hatena"
                    android:background="#E3F2FD">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/hatena"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/padding_to_highlight_text"
                        android:layout_marginLeft="@dimen/padding_to_highlight_text"
                        android:text="@string/prompt_signin_by_hatena"
                        android:textSize="18dp"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>
