<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/timer_done_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_timer_done_desc"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/timer_do_later_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_timer_do_later_desc"
            android:visibility="gone"/>

        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
            android:id="@+id/calendar"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:mcv_showOtherDates="all"
            app:mcv_selectionColor="#00F"
            />

        <LinearLayout
            android:id="@+id/time_selecter"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/timer_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_between_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/prompt_done_time_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_timer_done_at"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/done_time_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    />
                <TextView
                    android:id="@+id/postfix_done_time_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/postfix_prompt_timer_done_at"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/done_time_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:visibility="gone">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_warning_red_600_18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_invalid_timer_done_at"
                android:textColor="@color/alert"
                android:textStyle="bold"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/prompt_time_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_next_due_at"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/time_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    />
                <TextView
                    android:id="@+id/postfix_time_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/postfix_prompt_next_due_at"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/due_time_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:visibility="gone">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_warning_red_600_18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_invalid_timer_due_at"
                android:textColor="@color/alert"
                android:textStyle="bold"
                android:textSize="16sp"/>
        </LinearLayout>


    </LinearLayout>
</ScrollView>
